[gd_scene load_steps=10 format=3 uid="uid://bpgarls6fjwn6"]

[ext_resource type="Script" path="res://scene/grenade/grenade_path.gd" id="1_q7a8c"]
[ext_resource type="PackedScene" uid="uid://dw5csxvtn82ir" path="res://scene/grenade/base_explosion_effect.tscn" id="2_irfry"]
[ext_resource type="Texture2D" uid="uid://dogqo44nikaqt" path="res://texture/Guns/1.png" id="2_xfeyb"]
[ext_resource type="PackedScene" uid="uid://kx34vsb54hv3" path="res://component/audio_player_component.tscn" id="4_qjgkm"]
[ext_resource type="AudioStream" uid="uid://ck6ic4xc27qqn" path="res://audio/drop/557110__jakubpjp__iceimpt_ice-piece-drop-on-frozen-puddle_jaku5.wav" id="6_0n6x3"]
[ext_resource type="AudioStream" uid="uid://d11n1xe8ortbw" path="res://audio/boom/401628__studiomandragore__explosion-pas.wav" id="6_wmo6i"]

[sub_resource type="Curve2D" id="Curve2D_r421c"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 200, 200)
}
point_count = 2

[sub_resource type="AtlasTexture" id="AtlasTexture_bi38j"]
atlas = ExtResource("2_xfeyb")
region = Rect2(32, 0, 16, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_vfoc6"]
radius = 25.0

[node name="GrenadePath" type="Path2D"]
curve = SubResource("Curve2D_r421c")
script = ExtResource("1_q7a8c")
grenade_explosion_effect_scene = ExtResource("2_irfry")

[node name="GrenadePathFollow" type="PathFollow2D" parent="."]
unique_name_in_owner = true
rotation = 0.785398
loop = false

[node name="Sprite2D" type="Sprite2D" parent="GrenadePathFollow"]
unique_name_in_owner = true
texture = SubResource("AtlasTexture_bi38j")
offset = Vector2(0, -2)

[node name="AttackArea" type="Area2D" parent="GrenadePathFollow/Sprite2D"]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 64
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrenadePathFollow/Sprite2D/AttackArea"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_vfoc6")
disabled = true
debug_color = Color(0.951762, 3.27289e-06, 0.562032, 0.42)

[node name="GrenadeExplosionEffect" type="Node2D" parent="GrenadePathFollow/Sprite2D"]
unique_name_in_owner = true

[node name="AudioPlayerComponent" parent="GrenadePathFollow/Sprite2D" instance=ExtResource("4_qjgkm")]
unique_name_in_owner = true
rotation = -0.785398
volume_db = -5.0
max_distance = 550.0
streams = Array[AudioStream]([ExtResource("6_0n6x3")])

[node name="AudioPlayerBoom" parent="GrenadePathFollow/Sprite2D" instance=ExtResource("4_qjgkm")]
unique_name_in_owner = true
volume_db = 0.0
streams = Array[AudioStream]([ExtResource("6_wmo6i")])
min_pitch = 1.0
max_pitch = 1.0

[node name="Timer" type="Timer" parent="."]
one_shot = true
